2011-03-30  Jessie Berlin  <jberlin@apple.com>

        [Leopard Intel Release Tests] editing/spelling/grammar.html failing since introduction in
        r82159.
        https://bugs.webkit.org/show_bug.cgi?id=57460

        Unreviewed, commit the failing expected results in order to get the bots green.

        * platform/mac-leopard/editing/spelling/grammar-expected.txt: Added.

2011-03-30  Jessie Berlin  <jberlin@apple.com>

        [Leopard Intel Release Tests] svg/text/bidi-embedded-direction.svg failing since
        introduction in r82411.
        https://bugs.webkit.org/show_bug.cgi?id=57458

        Unreviewed, add the platform-specific failing results to get the bots green.

        NOTE: The platform-specific failing pixel test results still need to be added.

        * platform/mac-leopard/svg/text/bidi-embedded-direction-expected.txt: Added.

2011-03-30  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Update expected files.

        * platform/qt/css1/box_properties/padding_right_inline-expected.checksum: Added.
        * platform/qt/css1/box_properties/padding_right_inline-expected.png: Added.
        * platform/qt/css1/box_properties/padding_right_inline-expected.txt:
        * platform/qt/css2.1/t090501-c414-flt-ln-00-d-expected.checksum:
        * platform/qt/css2.1/t090501-c414-flt-ln-00-d-expected.png:
        * platform/qt/css2.1/t090501-c414-flt-ln-00-d-expected.txt:
        * platform/qt/css2.1/t090501-c414-flt-ln-01-d-g-expected.checksum:
        * platform/qt/css2.1/t090501-c414-flt-ln-01-d-g-expected.png:
        * platform/qt/css2.1/t090501-c414-flt-ln-01-d-g-expected.txt:
        * platform/qt/css2.1/t090501-c414-flt-ln-02-d-expected.checksum:
        * platform/qt/css2.1/t090501-c414-flt-ln-02-d-expected.png:
        * platform/qt/css2.1/t090501-c414-flt-ln-02-d-expected.txt:
        * platform/qt/css2.1/t090501-c414-flt-ln-03-d-expected.checksum:
        * platform/qt/css2.1/t090501-c414-flt-ln-03-d-expected.png: