@@ -16,8 +16,6 @@
 <script>
 var test = function()
 {
-    WebInspector.showPanel("elements");
-
     InspectorTest.reloadPage(step1);
 
     function step1()
