@@ -1,3 +1,12 @@
+2011-03-30  Andrey Kosyakov  <caseq@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: audit run never completes, fails in DOMAgent.js
+        https://bugs.webkit.org/show_bug.cgi?id=57349
+
+        * inspector/audits/audits-panel-functional.html: do not select Elements panel before running Audits, this hides bug 57349
+
 2011-03-30  Jessie Berlin  <jberlin@apple.com>
 
         [Leopard Intel Release Tests] editing/spelling/grammar.html failing since introduction in
